apps/webapp-color/gatewayapi/gateway.yaml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-gateway-class
spec:
  controllerName: projectcontour.io/gateway-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour                             # Must match gatewayRef in contour-data-values
  namespace: tanzu-system-ingress
spec:
  gatewayClassName: contour-gateway-class   # Must match Gateway Class created above
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
