apps/webapp-color/gatewayapi/webapp-color-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapp-color-route
  namespace: default
spec:
  parentRefs:
    - name: contour # The name of the Gateway object in your cluster
      namespace: tanzu-system-ingress # The namespace where the Gateway lives
  hostnames:
    - "webapp.ing.vdoubleb.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webapp-color-service
          port: 80
